--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
         <!-- Контакти -->
         <ul>
             <li><a href="malito:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="+380961111111">+38 096 111 11 11</a></li>
+            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
     </header>
     <!-- Основний контент -->
    <main>
     <!-- Герой -->
     <section>
-        <h1>Ефективні рішення <br/> для вашого бізнесу</h1>
+        <h1>Ефективні рішення для вашого бізнесу</h1>
         <button type="button">Замовити послугу</button>
     </section>
     <!-- Наші особливості -->
@@ -57,7 +57,7 @@
     <section>
         <h2>Чим ми займаємося</h2>
         <ul>
-            <li><img src="/images/img.jpg" alt="Десктопні додатки" width="370"></li>
+            <li><img src="./images/img.jpg" alt="Десктопні додатки" width="370"></li>
             <li><img src="./images/img-2.jpg" alt="Мобільні додатки" width="370"></li>
             <li><img src="./images/img-3.jpg" alt="Дизайнерські рішення" width="370"></li>
         </ul>
@@ -67,13 +67,13 @@
         <h2>Наша команда</h2>
         <ul>
             <li><img src="./images/img-4.jpg" alt="Усміхнений мужчина в окулярах" width="270">
-            <h3>Ігор Дем'яненко</h3>Product Designer</li>
+            <h3>Ігор Дем'яненко</h3><p lang="en">Product Designer</p></li>
             <li><img src="./images/img-5.jpg" alt="Усміхнена дівчина" width="270">
-            <h3>Ольга Рєпіна</h3>Frontend Developer</li>
+            <h3>Ольга Рєпіна</h3><p lang="en">Frontend Developer</p></li>
             <li><img src="./images/img-6.jpg" alt="Усміхнений хлопець" width="270">
-            <h3>Микола Тарасов</h3>Marketing</li>
+            <h3>Микола Тарасов</h3><p lang="en">Marketing</p></li>
             <li><img src="./images/img-7.jpg" alt="Хлопець в окулярах" width="270">
-            <h3>Михайло Єрмаков</h3>UI Designer</li>
+            <h3>Михайло Єрмаков</h3><p lang="en">UI Designer</p></li>
         </ul>
     </section>
    </main>
@@ -84,7 +84,7 @@
         <ul>
             <li><a href="https://goo.gl/maps/bKzN3VFKRx83bwKXA" target="_blank" rel="noopener noreferrer nofollow">м. Київ, пр-т Лесі Українки, 26</a></li>
             <li><a href="malito:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="+380961111111">+38 096 111 11 11</a></li>
+            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
     </address>
    </footer>
